# wetSpring

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  CONTROL_EXPERIMENT_STATUS.md  Cargo.toml  EVOLUTION_READINESS.md  GAPS.md  HANDOFF_SPRINGS_TO_TOADSTOOL_FEB_17_2026.md  HANDOFF_WETSPRING_TO_TOADSTOOL_FEB_16_2026.md  HANDOFF_WETSPRING_TO_TOADSTOOL_FEB_19_2026.md  HANDOFF_WETSPRING_TO_TOADSTOOL_FEB_19_2026_v2.md  HANDOFF_WETSPRING_TO_TOADSTOOL_FEB_19_2026_v3.md  HANDOFF_WETSPRING_TO_TOADSTOOL_FEB_20_2026.md  HANDOFF_WETSPRING_TO_TOADSTOOL_FEB_21_2026.md  LICENSE  README.md  SECURITY.md  TOADSTOOL_ABSORPTION_SPEC.md  capability_registry.toml  deny.toml  requirements.txt
barracuda/: ABSORPTION_MANIFEST.md  Cargo.toml  DEPRECATION_MIGRATION.md  EVOLUTION_READINESS.md  README.md  clippy.toml  deny.toml  justfile
barracuda/data/: bonding_metadata.json  reference_registry.json  reproduction_manifest.toml
barracuda/data/chembl/: oclacitinib_ic50_panel.json  oclacitinib_pubchem.json
barracuda/examples/: gen_checksums.rs
barracuda/fossilRecord/scripts/: migrate_to_unibin.py
barracuda/fuzz/: Cargo.toml
barracuda/fuzz/fuzz_targets/: fuzz_fastq.rs  fuzz_ms2.rs  fuzz_mzml.rs  fuzz_xml.rs
barracuda/proptest-regressions/bio/: bootstrap.txt  gillespie.txt
barracuda/src/: cast.rs  df64_host.rs  encoding.rs  error.rs  gpu.rs  lib.rs  ncbi.rs  niche.rs  npu.rs  primal_names.rs  provenance.rs  provenance_registry.rs  special.rs  tolerances.rs  tolerances_tests.rs  upstream_contract.rs  validation.rs
barracuda/src/bench/: hardware.rs  hardware_tests.rs  mod.rs  power.rs  power_tests.rs  report.rs  tests.rs
barracuda/src/bio/: adapter.rs  alignment.rs  anderson_spectral.rs  ani.rs  ani_gpu.rs  batch_fitness_gpu.rs  binding_landscape.rs  bistable.rs  bistable_gpu.rs  bootstrap.rs  calibration.rs  capacitor.rs  capacitor_gpu.rs  chimera.rs  chimera_gpu.rs  cooperation.rs  cooperation_gpu.rs  dada2.rs  dada2_gpu.rs  decision_tree.rs  derep.rs  derep_gpu.rs  diversity.rs  diversity_fusion_gpu.rs  diversity_gpu.rs  dnds.rs  dnds_gpu.rs  dorado.rs  eic.rs  eic_gpu.rs  esn.rs  feature_table.rs  feature_table_gpu.rs  felsenstein.rs  felsenstein_tests.rs  fst_variance.rs  gbm.rs  gbm_gpu.rs  gbm_tests.rs  gemm_cached.rs  (+72 more)
barracuda/src/bio/brain/: mod.rs  nautilus_bridge.rs  observation.rs  tests.rs
barracuda/src/bio/chimera/: detection.rs  kmer_sketch.rs  mod.rs
barracuda/src/bio/dada2/: core.rs  mod.rs  types.rs
barracuda/src/bio/dnds/: mod.rs  tests.rs
barracuda/src/bio/esn/: config.rs  heads.rs  mod.rs  npu.rs  reservoir.rs  tests.rs  toadstool_bridge.rs  training.rs
barracuda/src/bio/msa/: alignment.rs  mod.rs  scoring.rs
barracuda/src/bio/ncbi_data/: biome.rs  campy.rs  mod.rs  vibrio.rs
barracuda/src/bio/pileup/: tests.rs
barracuda/src/bio/quality/: mod.rs  quality_tests.rs  trim.rs
barracuda/src/bio/read_mapper/: tests.rs
barracuda/src/bio/ref_index/: tests.rs
barracuda/src/bio/shaders/: diversity_fusion_f64.wgsl
barracuda/src/bio/signal/: mod.rs  peak_detect.rs  prominence.rs  smoothing.rs
barracuda/src/bio/streaming_gpu/: analytics.rs  mod.rs  stages.rs
barracuda/src/bio/taxonomy/: classifier.rs  kmers.rs  mod.rs  types.rs
barracuda/src/bio/unifrac/: distance.rs  flat_tree.rs  mod.rs  tree.rs
barracuda/src/bio/variant_caller/: tests.rs
barracuda/src/certification/: bare.rs  health.rs  mod.rs
barracuda/src/facade/: dark_forest.rs  grammar.rs  graph_validate.rs  ipc_client.rs  mod.rs  provenance.rs  routes.rs  shaping.rs
barracuda/src/gpu/: context.rs  mod.rs
barracuda/src/io/: biom.rs  fasta.rs  fastq.rs  mod.rs  ms2.rs  mzml.rs  sam.rs  xml.rs
barracuda/src/io/fasta/: tests.rs
barracuda/src/io/fastq/: mod.rs  stats.rs  tests.rs
barracuda/src/io/jcamp/: mod.rs
barracuda/src/io/ms2/: mod.rs  parser.rs  stats.rs  types.rs
barracuda/src/io/mzml/: decode.rs  mod.rs  stats.rs  tests.rs
barracuda/src/io/mzxml/: mod.rs  parser.rs  types.rs
barracuda/src/io/nanopore/: mod.rs  nrs.rs  synthetic.rs  types.rs
barracuda/src/io/sam/: tests.rs
barracuda/src/io/xml/: mod.rs  (+1 more)
barracuda/src/ipc/: barracuda_route.rs  capability_domains.rs  composition_health.rs  compute_dispatch.rs  connection.rs  discover.rs  dispatch.rs  dispatch_strategy.rs  handlers.rs  mcp.rs  message.rs  metrics.rs  mod.rs  performance_surface.rs  precision_route.rs  primal_names.rs  protocol.rs  provenance.rs  resilience.rs  server.rs  skunkbat.rs  songbird.rs  stream_item.rs  sweetgrass.rs  timeouts.rs  timeseries.rs  toadstool_validate.rs  transport.rs
barracuda/src/ncbi/: api_key.rs  cache.rs  efetch.rs  entrez.rs  http.rs  mod.rs  nestgate.rs  sra.rs
barracuda/src/shaders/: ani_batch_f64.wgsl  batched_qs_ode_rk4_f64.wgsl  bistable_ode_rk4_f64.wgsl  bray_curtis_pairs_f64.wgsl  capacitor_ode_rk4_f64.wgsl  cooperation_ode_rk4_f64.wgsl  dada2_e_step.wgsl  dnds_batch_f64.wgsl  hmm_forward_f64.wgsl  kmer_histogram_f64.wgsl  multi_signal_ode_rk4_f64.wgsl  pangenome_classify.wgsl  phage_defense_ode_rk4_f64.wgsl  quality_filter.wgsl  rf_batch_inference.wgsl  snp_calling_f64.wgsl  taxonomy_fc_f64.wgsl  unifrac_propagate_f64.wgsl
barracuda/src/tolerances/: bio.rs  gpu.rs  instrument.rs  mod.rs  spectral.rs  tests.rs
barracuda/src/validation/: data_dir.rs  domain.rs  harness.rs  mod.rs  or_exit.rs  parity.rs  sink.rs  test_data.rs  tests.rs  timing.rs
barracuda/src/vault/: consent.rs  error.rs  mod.rs  provenance.rs  storage.rs
barracuda/src/visualization/: capabilities.rs  ipc_push.rs  live_pipeline.rs  mod.rs  stream.rs  stream_ecology.rs  types.rs
barracuda/tests/: bio_integration.rs  ci_cross_sync.rs  determinism.rs  io_roundtrip.rs  ipc_roundtrip.rs
experiments/exp400_nucleus_composition_parity/: Cargo.toml
experiments/exp400_nucleus_composition_parity/src/: main.rs
metalForge/forge/: Cargo.toml
metalForge/forge/examples/: inventory.rs
metalForge/forge/src/: bridge.rs  data.rs  dispatch.rs  error.rs  inventory.rs  lib.rs  ncbi.rs  ncbi_tests.rs  nest.rs  node.rs  probe.rs  streaming.rs  substrate.rs  workloads.rs
(+1243 files in other folders)
