# SPDX-License-Identifier: AGPL-3.0-or-later
#
# wetSpring workspace — stops Cargo from walking up to the parent
# ecoPrimals workspace. Each sub-crate retains its own [workspace]
# root so that `cargo test` works both from sub-crate directories
# and from this root via `--manifest-path`.

[workspace]
resolver = "2"
members = [
    "barracuda",
    "metalForge/forge",
]
# barracuda/fuzz excluded: fuzz targets run indefinitely and block `cargo test --workspace`.
# Run fuzz independently: `cd barracuda/fuzz && cargo +nightly fuzz run <target>`

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "AGPL-3.0-or-later"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "deny"
unwrap_used = "deny"
doc_markdown = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"
