[package]
name = "wetspring-barracuda"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Squirrel Team"]
license = "AGPL-3.0-or-later"
description = "Life science + PFAS analytical chemistry pipelines — Rust + GPU via BarraCUDA/ToadStool"
repository = "https://github.com/syntheticChemistry/wetSpring"
keywords = ["bioinformatics", "mass-spectrometry", "pfas", "gpu", "wgsl"]
categories = ["science", "command-line-utilities"]

[workspace]
members = ["fuzz"]

[features]
default = []
# GPU acceleration via BarraCUDA/ToadStool (Phase 3).
# Enable with `cargo build --features gpu`.
# Pulls in wgpu v22 (device creation), barracuda (23 ToadStool primitives),
# and tokio (async device init). 4 local WGSL shaders (ODE, kmer, unifrac, taxonomy).
# GEMM uses GemmF64::WGSL (no cross-repo include_str!).
gpu = ["dep:barracuda", "dep:wgpu", "dep:tokio"]
# JSON model import (2 bins: validate_pfas_decision_tree, benchmark_three_tier).
json = ["dep:serde_json"]

[dependencies]
# serde_json: JSON parsing for validation data and model import (2 binaries).
serde_json = { version = "1", optional = true }

# BarraCUDA: shared scientific computing library (ToadStool GPU compute).
# Provides FusedMapReduceF64, BrayCurtisF64, BatchedEighGpu, GemmF64,
# KrigingF64, VarianceF64, CorrelationF64, CovarianceF64, WeightedDotF64.
barracuda = { path = "../../phase1/toadstool/crates/barracuda", optional = true }

# wgpu: WebGPU compute — hardware-agnostic GPU via Vulkan/Metal/DX12.
# Same version as barracuda to prevent duplicate symbol linking errors.
wgpu = { version = "22", optional = true }

# Async runtime for GPU device creation (barracuda already brings tokio in).
tokio = { version = "1", features = ["rt", "macros"], optional = true }


# bytemuck: zero-copy casting for GPU uniform buffers (GemmCached params).
# Already a transitive dep via barracuda; pinned here for local extensions.
bytemuck = { version = "1", features = ["derive"] }

# I/O: zlib decompression (mzML binary arrays) + GzDecoder (FASTQ .gz).
# Uses miniz_oxide (pure Rust) by default — no C zlib, ecoBin compliant.
# XML parsing is sovereign (src/io/xml.rs); base64 is sovereign (src/encoding.rs).
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
tempfile = "3"

# ── Track 1 validation binaries ──────────────────────────────────
[[bin]]
name = "validate_fastq"
path = "src/bin/validate_fastq.rs"

[[bin]]
name = "validate_diversity"
path = "src/bin/validate_diversity.rs"

# ── Track 2 validation binaries ──────────────────────────────────
[[bin]]
name = "validate_mzml"
path = "src/bin/validate_mzml.rs"

[[bin]]
name = "validate_pfas"
path = "src/bin/validate_pfas.rs"

# ── Feature pipeline validation binary (Exp009) ──────────────────
[[bin]]
name = "validate_features"
path = "src/bin/validate_features.rs"

# ── Peak detection validation binary (Exp010) ────────────────────
[[bin]]
name = "validate_peaks"
path = "src/bin/validate_peaks.rs"

# ── 16S pipeline validation binary (dada2/chimera/taxonomy/unifrac) ──
[[bin]]
name = "validate_16s_pipeline"
path = "src/bin/validate_16s_pipeline.rs"

# ── Algae pond 16S validation binary (Exp012, paper proxy) ───────
[[bin]]
name = "validate_algae_16s"
path = "src/bin/validate_algae_16s.rs"

# ── Extended algae validation binary (Exp017, PRJNA382322) ───────
[[bin]]
name = "validate_extended_algae"
path = "src/bin/validate_extended_algae.rs"

# ── VOC peak validation binary (Exp013, Reese 2019) ─────────────
[[bin]]
name = "validate_voc_peaks"
path = "src/bin/validate_voc_peaks.rs"

# ── Public data benchmark validation (Exp014, PRJNA1114688) ──────
[[bin]]
name = "validate_public_benchmarks"
path = "src/bin/validate_public_benchmarks.rs"

# ── PFAS library validation binary (Exp018, Jones Lab) ───────────
[[bin]]
name = "validate_pfas_library"
path = "src/bin/validate_pfas_library.rs"

# ── Robinson-Foulds tree distance validation (Exp021) ───────────
[[bin]]
name = "validate_rf_distance"
path = "src/bin/validate_rf_distance.rs"

# ── QS/c-di-GMP ODE validation (Exp020, Waters 2008) ────────────
[[bin]]
name = "validate_qs_ode"
path = "src/bin/validate_qs_ode.rs"

# ── Gillespie SSA validation (Exp022, Massie 2012) ────────────────
[[bin]]
name = "validate_gillespie"
path = "src/bin/validate_gillespie.rs"

# ── Newick parsing validation (Exp019 Phase 1) ────────────────────
[[bin]]
name = "validate_newick_parse"
path = "src/bin/validate_newick_parse.rs"

# ── PFAS decision tree inference (Exp008 Phase 3) ─────────────────
[[bin]]
name = "validate_pfas_decision_tree"
path = "src/bin/validate_pfas_decision_tree.rs"
required-features = ["json"]

# ── Bistable phenotypic switching (Exp023, Fernandez 2020) ────────
[[bin]]
name = "validate_bistable"
path = "src/bin/validate_bistable.rs"

# ── Multi-input QS network (Exp024, Srivastava 2011) ─────────────
[[bin]]
name = "validate_multi_signal"
path = "src/bin/validate_multi_signal.rs"

# ── Cooperative QS game theory (Exp025, Bruger & Waters 2018) ────
[[bin]]
name = "validate_cooperation"
path = "src/bin/validate_cooperation.rs"

# ── HMM primitives (Exp026, Liu 2014) ────────────────────────────
[[bin]]
name = "validate_hmm"
path = "src/bin/validate_hmm.rs"

# ── Phenotypic capacitor (Exp027, Mhatre 2020) ──────────────────
[[bin]]
name = "validate_capacitor"
path = "src/bin/validate_capacitor.rs"

# ── Smith-Waterman alignment (Exp028, Liu track) ────────────────
[[bin]]
name = "validate_alignment"
path = "src/bin/validate_alignment.rs"

# ── Felsenstein pruning (Exp029, phylogenetic) ──────────────────
[[bin]]
name = "validate_felsenstein"
path = "src/bin/validate_felsenstein.rs"

# ── BarraCUDA CPU parity (all domains) ──────────────────────────
[[bin]]
name = "validate_barracuda_cpu"
path = "src/bin/validate_barracuda_cpu.rs"

# ── Phage defense (Exp030, Hsueh/Severin 2022) ─────────────────
[[bin]]
name = "validate_phage_defense"
path = "src/bin/validate_phage_defense.rs"

# ── RAWR bootstrap (Exp031, Wang 2021) ──────────────────────────
[[bin]]
name = "validate_bootstrap"
path = "src/bin/validate_bootstrap.rs"

# ── Phylogenetic placement (Exp032, Alamin & Liu 2024) ──────────
[[bin]]
name = "validate_placement"
path = "src/bin/validate_placement.rs"

# ── Neighbor-Joining (Exp033, Liu 2009 SATé) ─────────────────────
[[bin]]
name = "validate_neighbor_joining"
path = "src/bin/validate_neighbor_joining.rs"

# ── DTL Reconciliation (Exp034, Zheng 2023) ─────────────────────
[[bin]]
name = "validate_reconciliation"
path = "src/bin/validate_reconciliation.rs"

# ── BarraCUDA CPU Parity v2 (Exp035) ────────────────────────────
[[bin]]
name = "validate_barracuda_cpu_v2"
path = "src/bin/validate_barracuda_cpu_v2.rs"

# ── PhyNetPy RF distances (Exp036) ────────────────────────────────
[[bin]]
name = "validate_phynetpy_rf"
path = "src/bin/validate_phynetpy_rf.rs"

# ── PhyloNet-HMM discordance (Exp037) ────────────────────────────
[[bin]]
name = "validate_phylohmm"
path = "src/bin/validate_phylohmm.rs"

# ── SATe pipeline benchmark (Exp038) ─────────────────────────────
[[bin]]
name = "validate_sate_pipeline"
path = "src/bin/validate_sate_pipeline.rs"

# ── Algal pond time-series (Exp039, PRJNA382322 proxy) ───────────
[[bin]]
name = "validate_algae_timeseries"
path = "src/bin/validate_algae_timeseries.rs"

# ── Bloom surveillance (Exp040, PRJNA1224988 proxy) ──────────────
[[bin]]
name = "validate_bloom_surveillance"
path = "src/bin/validate_bloom_surveillance.rs"

# ── EPA PFAS ML (Exp041) ─────────────────────────────────────────
[[bin]]
name = "validate_epa_pfas_ml"
path = "src/bin/validate_epa_pfas_ml.rs"

# ── MassBank spectral matching (Exp042) ──────────────────────────
[[bin]]
name = "validate_massbank_spectral"
path = "src/bin/validate_massbank_spectral.rs"

# ── BarraCUDA CPU Parity v3 (Exp043 — all 18 domains) ───────────
[[bin]]
name = "validate_barracuda_cpu_v3"
path = "src/bin/validate_barracuda_cpu_v3.rs"

# ── BarraCUDA CPU Parity v4 (Exp057 — Track 1c, 23 total domains) ──
[[bin]]
name = "validate_barracuda_cpu_v4"
path = "src/bin/validate_barracuda_cpu_v4.rs"

# ── 23-domain head-to-head timing benchmark (Exp059) ─────────────
[[bin]]
name = "benchmark_23_domain_timing"
path = "src/bin/benchmark_23_domain_timing.rs"

# ── BarraCUDA CPU Parity v5 (Exp061/062 — RF + GBM, 25 total domains) ──
[[bin]]
name = "validate_barracuda_cpu_v5"
path = "src/bin/validate_barracuda_cpu_v5.rs"

# ── Exp079: BarraCUDA CPU v6 — ODE Flat Param Fidelity ──
[[bin]]
name = "validate_barracuda_cpu_v6"
path = "src/bin/validate_barracuda_cpu_v6.rs"

# ── Exp085: BarraCUDA CPU v7 — Tier A Data Layout Fidelity ──
[[bin]]
name = "validate_barracuda_cpu_v7"
path = "src/bin/validate_barracuda_cpu_v7.rs"

# ── Exp070: BarraCUDA CPU Full — 25-Domain Pure Rust Math Proof ──
[[bin]]
name = "validate_barracuda_cpu_full"
path = "src/bin/validate_barracuda_cpu_full.rs"

# ── Rare biosphere validation (Exp051, Anderson 2015) ─────────────
[[bin]]
name = "validate_rare_biosphere"
path = "src/bin/validate_rare_biosphere.rs"

# ── Pangenomics validation (Exp056, Moulana 2020) ─────────────────
[[bin]]
name = "validate_pangenomics"
path = "src/bin/validate_pangenomics.rs"

# ── Population genomics validation (Exp055, Anderson 2017) ────────
[[bin]]
name = "validate_population_genomics"
path = "src/bin/validate_population_genomics.rs"

# ── Phosphorus phylogenomics validation (Exp054, Boden 2024) ──────
[[bin]]
name = "validate_phosphorus_phylogenomics"
path = "src/bin/validate_phosphorus_phylogenomics.rs"

# ── Sulfur phylogenomics validation (Exp053, Mateos 2023) ─────────
[[bin]]
name = "validate_sulfur_phylogenomics"
path = "src/bin/validate_sulfur_phylogenomics.rs"

# ── Viral metagenomics validation (Exp052, Anderson 2014) ─────────
[[bin]]
name = "validate_viral_metagenomics"
path = "src/bin/validate_viral_metagenomics.rs"

# ── Pipeline benchmark (Exp015: Rust CPU vs Galaxy/QIIME2) ───────
[[bin]]
name = "benchmark_pipeline"
path = "src/bin/benchmark_pipeline.rs"

# ── ToadStool Bio Absorption (Exp045) ────────────────────────────
[[bin]]
name = "validate_toadstool_bio"
path = "src/bin/validate_toadstool_bio.rs"
required-features = ["gpu"]

# ── BarraCUDA GPU v3 (Exp044 — CPU→GPU parity for v3 domains) ────
[[bin]]
name = "validate_barracuda_gpu_v3"
path = "src/bin/validate_barracuda_gpu_v3.rs"
required-features = ["gpu"]

# ── Exp071: BarraCUDA GPU Full — Math Portability Proof ──
[[bin]]
name = "validate_barracuda_gpu_full"
path = "src/bin/validate_barracuda_gpu_full.rs"
required-features = ["gpu"]

# ── GPU validation binaries (require --features gpu) ─────────────
[[bin]]
name = "validate_diversity_gpu"
path = "src/bin/validate_diversity_gpu.rs"
required-features = ["gpu"]

# ── GPU 16S pipeline parity (Exp016: CPU vs GPU math parity) ─────
[[bin]]
name = "validate_16s_pipeline_gpu"
path = "src/bin/validate_16s_pipeline_gpu.rs"
required-features = ["gpu"]

# ── GPU Phylogenetic Composition (Exp046) ────────────────────────
[[bin]]
name = "validate_gpu_phylo_compose"
path = "src/bin/validate_gpu_phylo_compose.rs"
required-features = ["gpu"]

# ── GPU HMM Batch Forward (Exp047) ──────────────────────────────
[[bin]]
name = "validate_gpu_hmm_forward"
path = "src/bin/validate_gpu_hmm_forward.rs"
required-features = ["gpu"]

# ── CPU vs GPU Phylo+HMM Benchmark (Exp048) ─────────────────────
[[bin]]
name = "benchmark_phylo_hmm_gpu"
path = "src/bin/benchmark_phylo_hmm_gpu.rs"
required-features = ["gpu"]

# ── GPU ODE Sweep + Bifurcation (Exp049-050) ─────────────────────
[[bin]]
name = "validate_gpu_ode_sweep"
path = "src/bin/validate_gpu_ode_sweep.rs"
required-features = ["gpu"]

# ── GPU Track 1c Promotion (Exp058: ANI + SNP + Pangenome GPU) ───
[[bin]]
name = "validate_gpu_track1c"
path = "src/bin/validate_gpu_track1c.rs"
required-features = ["gpu"]

# ── metalForge cross-substrate validation (Exp060) ───────────────
[[bin]]
name = "validate_cross_substrate"
path = "src/bin/validate_cross_substrate.rs"
required-features = ["gpu"]

# ── GPU Random Forest (Exp063) ────────────────────────────────────
[[bin]]
name = "validate_gpu_rf"
path = "src/bin/validate_gpu_rf.rs"
required-features = ["gpu"]

# ── BarraCUDA GPU Parity v1 (Exp064 — consolidated GPU domains) ────
[[bin]]
name = "validate_barracuda_gpu_v1"
path = "src/bin/validate_barracuda_gpu_v1.rs"
required-features = ["gpu"]

# ── metalForge Full Cross-System (Exp065) ────────────────────────
[[bin]]
name = "validate_metalforge_full"
path = "src/bin/validate_metalforge_full.rs"
required-features = ["gpu"]

# ── metalForge Full Cross-Substrate v2 (Exp084) ──────────────────
[[bin]]
name = "validate_metalforge_full_v2"
path = "src/bin/validate_metalforge_full_v2.rs"
required-features = ["gpu"]

# ── CPU vs GPU All Domains (Exp092) ───────────────────────────────
[[bin]]
name = "validate_cpu_vs_gpu_all_domains"
path = "src/bin/validate_cpu_vs_gpu_all_domains.rs"
required-features = ["gpu"]

# ── metalForge Full v3 (Exp093) ──────────────────────────────────
[[bin]]
name = "validate_metalforge_full_v3"
path = "src/bin/validate_metalforge_full_v3.rs"
required-features = ["gpu"]

# ── Pure GPU Streaming Pipeline (Exp090) ──────────────────────────
[[bin]]
name = "validate_pure_gpu_streaming"
path = "src/bin/validate_pure_gpu_streaming.rs"
required-features = ["gpu"]

# ── Streaming vs Round-Trip Benchmark (Exp091) ───────────────────
[[bin]]
name = "benchmark_streaming_vs_roundtrip"
path = "src/bin/benchmark_streaming_vs_roundtrip.rs"
required-features = ["gpu"]

# ── GPU Extended Domains (Exp087) ─────────────────────────────────
[[bin]]
name = "validate_gpu_extended"
path = "src/bin/validate_gpu_extended.rs"
required-features = ["gpu"]

# ── metalForge PCIe Direct Transfer Proof (Exp088) ───────────────
[[bin]]
name = "validate_pcie_direct"
path = "src/bin/validate_pcie_direct.rs"

# ── ToadStool Streaming Dispatch Proof (Exp089) ──────────────────
[[bin]]
name = "validate_streaming_dispatch"
path = "src/bin/validate_streaming_dispatch.rs"

# ── metalForge End-to-End Pipeline Proof (Exp086) ────────────────
[[bin]]
name = "validate_metalforge_pipeline"
path = "src/bin/validate_metalforge_pipeline.rs"

# ── CPU vs GPU All-Domain Scaling (Exp066) ───────────────────────
[[bin]]
name = "benchmark_all_domains_cpu_gpu"
path = "src/bin/benchmark_all_domains_cpu_gpu.rs"
required-features = ["gpu"]

# ── Dispatch Overhead Profiling (Exp067) ─────────────────────────
[[bin]]
name = "benchmark_dispatch_overhead"
path = "src/bin/benchmark_dispatch_overhead.rs"
required-features = ["gpu"]

# ── Three-Tier Benchmark: Python vs CPU vs GPU (Exp069) ─────────
[[bin]]
name = "benchmark_three_tier"
path = "src/bin/benchmark_three_tier.rs"
required-features = ["gpu", "json"]

# ── CPU vs GPU benchmark (require --features gpu) ────────────────
[[bin]]
name = "benchmark_cpu_gpu"
path = "src/bin/benchmark_cpu_gpu.rs"
required-features = ["gpu"]

# ── GPU Streaming Pipeline Proof (Exp072) ────────────────────────
[[bin]]
name = "validate_gpu_streaming_pipeline"
path = "src/bin/validate_gpu_streaming_pipeline.rs"
required-features = ["gpu"]

# ── Dispatch Overhead Proof (Exp073) ─────────────────────────────
[[bin]]
name = "validate_dispatch_overhead_proof"
path = "src/bin/validate_dispatch_overhead_proof.rs"
required-features = ["gpu"]

# ── metalForge Substrate Router (Exp074) ─────────────────────────
[[bin]]
name = "validate_substrate_router"
path = "src/bin/validate_substrate_router.rs"
required-features = ["gpu"]

# ── Pure GPU Analytics Pipeline (Exp075) ─────────────────────────
[[bin]]
name = "validate_pure_gpu_pipeline"
path = "src/bin/validate_pure_gpu_pipeline.rs"
required-features = ["gpu"]

# ── Cross-Substrate Pipeline (Exp076) ────────────────────────────
[[bin]]
name = "validate_cross_substrate_pipeline"
path = "src/bin/validate_cross_substrate_pipeline.rs"
required-features = ["gpu"]
